[gd_scene load_steps=9 format=2]

[ext_resource path="res://Pins/BasePin.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameBoard.gd" type="Script" id=2]
[ext_resource path="res://PieceSpawner.gd" type="Script" id=3]
[ext_resource path="res://GamePieces/SquarePiece.tscn" type="PackedScene" id=4]
[ext_resource path="res://Elements/Final elements/Wood Background.png" type="Texture" id=5]
[ext_resource path="res://Pins/10Pin.tscn" type="PackedScene" id=7]

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.56
bounce = 0.2

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 516, 54 )

[node name="GameBoard" type="Node2D"]
script = ExtResource( 2 )

[node name="WoodBackground" type="Sprite" parent="."]
position = Vector2( 450, 380 )
texture = ExtResource( 5 )

[node name="10Pin" parent="WoodBackground" instance=ExtResource( 7 )]
position = Vector2( -190, 333 )

[node name="Pins" type="Node2D" parent="."]

[node name="BasePin3" parent="Pins" instance=ExtResource( 1 )]
position = Vector2( 387, 268 )

[node name="BasePin4" parent="Pins" instance=ExtResource( 1 )]
position = Vector2( 387, 332 )

[node name="BasePin5" parent="Pins" instance=ExtResource( 1 )]
position = Vector2( 515, 269 )

[node name="BasePin6" parent="Pins" instance=ExtResource( 1 )]
position = Vector2( 324, 455 )

[node name="BasePin7" parent="Pins" instance=ExtResource( 1 )]
position = Vector2( 197, 460 )

[node name="10Pin2" parent="Pins" instance=ExtResource( 7 )]
position = Vector2( 132, 589 )

[node name="BasePin10" parent="Pins" instance=ExtResource( 1 )]
position = Vector2( 578, 651 )

[node name="BasePin11" parent="Pins" instance=ExtResource( 1 )]
position = Vector2( 643, 332 )

[node name="BasePin9" parent="Pins" instance=ExtResource( 1 )]
position = Vector2( 706, 395 )

[node name="10Pin" parent="Pins" instance=ExtResource( 7 )]
position = Vector2( 514, 395 )

[node name="10Pin" parent="Pins/10Pin" instance=ExtResource( 7 )]
position = Vector2( 193, 129 )

[node name="BasePin" parent="Pins" instance=ExtResource( 1 )]
position = Vector2( 68, 205 )

[node name="BasePin2" parent="Pins" instance=ExtResource( 1 )]
position = Vector2( 195, 331 )

[node name="BasePin8" parent="Pins" instance=ExtResource( 1 )]
position = Vector2( 67, 395 )

[node name="Line" type="Area2D" parent="."]
position = Vector2( -1, 37 )
collision_layer = 2
collision_mask = 2

[node name="Polygon2D" type="Polygon2D" parent="Line"]
visible = false
color = Color( 0, 0, 0, 0.866667 )
polygon = PoolVector2Array( 0, 100, 1021, 100, 1022, 135, 0, 135 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Line"]
position = Vector2( 3, -12 )
polygon = PoolVector2Array( 1, 116, 898, 114, 898, 136, 0, 135 )

[node name="Wall" type="StaticBody2D" parent="."]
position = Vector2( -31, 1 )
physics_material_override = SubResource( 2 )

[node name="Polygon2D" type="Polygon2D" parent="Wall"]
polygon = PoolVector2Array( -30, 0, 30, 0, 30, 884, -25, 884 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Wall"]
polygon = PoolVector2Array( -30, 0, 30, 0, 30, 884, -25, 884 )

[node name="Wall2" type="StaticBody2D" parent="."]
position = Vector2( 934, -2 )
physics_material_override = SubResource( 2 )

[node name="Polygon2D" type="Polygon2D" parent="Wall2"]
polygon = PoolVector2Array( -30, 0, 30, 0, 30, 884, -25, 884 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Wall2"]
polygon = PoolVector2Array( -30, 0, 30, 0, 30, 884, -25, 884 )

[node name="PieceSpawner" type="Node2D" parent="."]
position = Vector2( 0, 1 )
script = ExtResource( 3 )
availible_pieces = [ ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ) ]

[node name="Position2D" type="Position2D" parent="PieceSpawner"]
position = Vector2( 166, 65 )

[node name="Position2D2" type="Position2D" parent="PieceSpawner"]
position = Vector2( 465, 67 )

[node name="Position2D3" type="Position2D" parent="PieceSpawner"]
position = Vector2( 757, 72 )

[node name="ActivePieces" type="Node2D" parent="PieceSpawner"]

[node name="DeleteArea" type="Area2D" parent="."]
position = Vector2( 1024, 0 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeleteArea"]
position = Vector2( -562, 847.5 )
shape = SubResource( 1 )

[connection signal="body_entered" from="Line" to="." method="_on_Line_body_entered"]
[connection signal="body_entered" from="DeleteArea" to="." method="_on_DeleteArea_body_entered"]
